--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,8 @@
             </intent-filter>
         </activity>
 
-    </application>
+    <activity android:label="Preferences" android:name="Preferences"></activity>
+</application>
     <uses-sdk android:minSdkVersion="8" />
 
 <uses-permission android:name="android.permission.CAMERA"></uses-permission>
