--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,4 +17,6 @@
     <uses-sdk android:minSdkVersion="8" />
 
 <uses-permission android:name="android.permission.CAMERA"></uses-permission>
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+
 </manifest> 
