--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="de.chaos_darmstadt.schlafwandler.SeCam"
+      package="de.chaos_darmstadt.schlafwandler.EnCam"
       android:versionCode="1"
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
-        <activity android:name=".SeCam"
+        <activity android:name="de.chaos_darmstadt.schlafwandler.EnCam.SeCam"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -12,7 +12,7 @@
             </intent-filter>
         </activity>
 
-    <activity android:label="Preferences" android:name="Preferences"></activity>
+    <activity android:label="Preferences" android:name="de.chaos_darmstadt.schlafwandler.EnCam.Preferences"></activity>
 </application>
     <uses-sdk android:minSdkVersion="8" />
 
