some cleanup (deleted code that was commented out ages ago)

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="de.chaos_darmstadt.schlafwandler.EnCam"
-      android:versionCode="1"
-      android:versionName="1.0">
+      android:versionCode="1" android:versionName="2011.09.15">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
         <activity android:name="de.chaos_darmstadt.schlafwandler.EnCam.EnCam"
                   android:label="@string/app_name">
