--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,21 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="de.chaos_darmstadt.schlafwandler.EnCam"
-      android:versionCode="1" android:versionName="2011.09.15">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
-        <activity android:name="de.chaos_darmstadt.schlafwandler.EnCam.EnCam"
-                  android:label="@string/app_name">
+    package="de.chaos_darmstadt.schlafwandler.EnCam"
+    android:versionCode="1"
+    android:versionName="@string/app_version">
+
+    <uses-sdk android:minSdkVersion="8" />
+    <uses-permission android:name="android.permission.CAMERA" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" >
+    </uses-permission>
+
+    <application
+        android:debuggable="true"
+        android:label="@string/app_name"
+        android:icon="@drawable/icon" >
+        <activity
+            android:name="de.chaos_darmstadt.schlafwandler.EnCam.EnCam"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="de.chaos_darmstadt.schlafwandler.EnCam.Preferences"
+            android:label="Preferences" >
+        </activity>
+        <activity
+            android:name="de.chaos_darmstadt.schlafwandler.EnCam.Help"
+            android:label="Help" >
+        </activity>
+    </application>
 
-    <activity android:label="Preferences" android:name="de.chaos_darmstadt.schlafwandler.EnCam.Preferences"></activity>
-</application>
-    <uses-sdk android:minSdkVersion="8" />
-
-<uses-permission android:name="android.permission.CAMERA"></uses-permission>
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-
-</manifest> 
+</manifest>
